# vandyhacks2018

./: .gitignore  README.md  webserver.nix
analytics/: create_data.ipynb  dnn.json  initialize_microstrategy_data.py  loud.csv  loud.json  mstr_api_test.ipynb  mstrio_test.ipynb  pred.py  quiet.json  server.py  test_data_analysis.ipynb  test_dossier.mstr  toy_client.py  train.py
analytics/.ipynb_checkpoints/: clean_test_data-checkpoint.ipynb
analytics/data/: base_dataset_ids.txt  generate_data.py  initial_data.csv  initial_data.json  loud.csv  loud.json  pred_dataset_ids.txt  predicted.csv  predictions.csv  quiet.csv  quiet.json
analytics/models/: dnn.json  weights.hdf5
api/: Cargo.toml  shell.nix
api/migrations/2018-11-02-035348_create_events/: up.sql
api/migrations/2018-11-02-040623_create_users/: up.sql
api/migrations/2018-11-03-045022_add_event_defaults/: down.sql  up.sql
api/migrations/2018-11-03-051829_add_work_table/: down.sql  up.sql
api/migrations/2018-11-03-053759_add_work_defaults/: down.sql  up.sql
api/migrations/2018-11-03-061638_work_end_time/: down.sql  up.sql
api/src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
webroot/: index.html  package-lock.json  package.json  vue.config.js
webroot/public/: manifest.json
webroot/src/: App.vue  api.js  main.js  router.js  service-worker.js  store.js
webroot/src/components/: StopWorkQuestion.vue  TaskCard.vue  TaskInput.vue  TaskQuestion.vue
webroot/src/views/: AddTask.vue  Analytics.vue  EditTask.vue  FinishWork.vue  MeetingsAnalytics.vue  PredictionsAnalytics.vue  StopWork.vue  (+2 more)
