[package]
name = "api"
version = "0.1.0"
authors = ["Steven Sheffey <stevensheffey4@gmail.com>"]

[dependencies]
diesel = { version = "1.3.3", features = ["postgres", "r2d2"] }
dotenv = "0.13.0"
rocket = "0.4.0-rc.1"
rocket_contrib = "0.4.0-rc.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
