[package]
name = "api"
version = "0.1.0"
authors = ["Steven Sheffey <stevensheffey4@gmail.com>"]

[dependencies]
bcrypt = "0.2.1"
diesel = { version = "1.3.3", features = ["postgres", "r2d2"] }
dotenv = "0.13.0"
hex = "0.3"
rand = "0.6.0-pre.1"
reqwest = "0.9.4"
rocket = "0.4.0-rc.1"
rocket_contrib = "0.4.0-rc.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
